# LaneDetCarla

./: .gitattributes  README.md  helper.py  myFirstCode.py  pygame_controller.py  pyproject.toml  requirements.txt
config/common/: culane.py
config/diffusionlane/: param.py
doc/: install.md
releases/Tusimple/CLRNet/: ResNet34_CVPR.pth
src/: README.md  carla_data.csv  detection&pid.py  draw_trajectory_in_carla.py  ego_trajectory_vision.csv  helper.py  manual_control.py  plot_trajectory.py  pygame_controller.py
src/heading_error_pid/: README.md  ego_trajectory.csv  ego_trajectory_heading.csv  pid_tuning.py  pygame_controller.py
src/lane_shift_pid/: README.md  ego_trajectory.csv  pid_tuning.py  pygame_controller.py
src/system_identificator/: carla_sysid.py  pid_tuning.py  sysid_lateral.csv  sysid_longitudinal.csv  sysid_meta.csv
unlanedet/model/DiffusionLane/: __init__.py
